CoqOfSolidity/test/libsolidity/syntaxTests/errors/using_structs.v
(* Generated by coq-of-solidity *)
Require Import CoqOfSolidity.CoqOfSolidity.

(* Struct S *)

(* Contract *)
Module C.
  (* Error MyError *)

  (* Error MyError2 *)
End C.
